# ivms-licenses-service

./: Cargo.toml  Makefile  README.md  buildspec.yml
.github/workflows/: build.yaml
docs/developer-guide/: db.md  setup.md
infrastructure/cloudformation/: config-dev.json  config-prod.json  config-staging.json  creator.yaml  db.yaml  deleter.yaml  fetcher.yaml  integration-tests.yaml  lister.yaml  root.yaml
integration-tests/: Cargo.toml
integration-tests/tests/: main.rs
integration-tests/tests/features/: create-license.feature  delete-license.feature  fetch-license.feature  list-licenses.feature
licenses-core/: Cargo.toml
licenses-core/src/: api_error.rs  lambda.rs  lib.rs  license_dao.rs  model.rs  runtime_error.rs
licenses-creator/: Cargo.toml
licenses-creator/src/: main.rs
licenses-deleter/: Cargo.toml
licenses-deleter/src/: main.rs
licenses-fetcher/: Cargo.toml
licenses-fetcher/src/: main.rs
licenses-lister/: Cargo.toml
licenses-lister/src/: main.rs
