##
# This file is part of the IVMS Online.
#
# @copyright 2023 © by Rafał Wrzeszcz - Wrzasq.pl.
##

[package]
name = "licenses-core"
version = "0.0.4"
edition = "2021"
repository = "https://github.com/ivms-online/ivms-licenses-service"
authors = [
    "Rafał Wrzeszcz <rafal.wrzeszcz@wrzasq.pl>"
]

[dependencies]
aws-config = "0.55.3"
aws-sdk-dynamodb = "0.28.0"
aws-smithy-http = "0.55.3"
chrono = { version = "0.4.26", default-features = false, features = ["serde"] }
env_logger = "0.10.0"
futures = "0.3.28"
http = "0.2.8"
lambda_runtime = "0.8.0"
log = "0.4.18"
serde = { version = "1.0.166", features = ["derive"] }
serde_dynamo = { version = "4.2.3", features = ["aws-sdk-dynamodb+0_28"] }
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["macros"] }
tokio-stream = "0.1.14"
tower = "0.4.13"
tracing = "0.1.37"
tracing-core = "0.1.31"
tracing-subscriber = "0.3.17"
uuid = { version = "1.3.3", features = ["serde", "v4"] }
xray = { git = "https://github.com/rafalwrzeszcz/xray", rev = "13196756f0f08965fa82033fb5aa2770d296f85d" }

[dev-dependencies]
async-trait = "0.1.68"
aws-smithy-types = "0.55.3"
http = "0.2.9"
test-context = "0.1.4"
