##
# This file is part of the IVMS Online.
#
# @copyright 2023 © by Rafał Wrzeszcz - Wrzasq.pl.
##

[package]
name = "licenses-deleter"
version = "0.0.4"
edition = "2021"
repository = "https://github.com/ivms-online/ivms-licenses-service"
authors = [
    "Rafał Wrzeszcz <rafal.wrzeszcz@wrzasq.pl>"
]

[dependencies]
licenses-core = { path = "../licenses-core" }
lambda_runtime = "0.8.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["macros"] }
uuid = { version = "1.3.3", features = ["v4"] }
