##
# This file is part of the IVMS Online.
#
# @copyright 2023 © by Rafał Wrzeszcz - Wrzasq.pl.
##

[package]
name = "licenses-lister"
version = "0.0.3"
edition = "2021"
repository = "https://github.com/ivms-online/ivms-licenses-service"
authors = [
    "Rafał Wrzeszcz <rafal.wrzeszcz@wrzasq.pl>"
]

[dependencies]
chrono = { version = "0.4.26", default-features = false, features = ["serde"] }
lambda_runtime = "0.8.0"
licenses-core = { path = "../licenses-core" }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["macros"] }
uuid = { version = "1.3.3", features = ["v4"] }
